--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@loadable/component": "^5.12.0",
     "@types/loadable__component": "^5.10.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "disqus-react": "^1.0.8",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-postcss": "^2.3.0",
