--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@loadable/component": "^5.12.0",
     "@types/loadable__component": "^5.10.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "bootstrap": "^4.4.1",
     "disqus-react": "^1.0.8",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.21.0",
@@ -33,13 +34,17 @@
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^2.8.0",
     "gatsby-transformer-sharp": "^2.5.0",
+    "gatsby-plugin-snipcart": "^1.1.2",
+    "gatsby-source-flotiq": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-slick": "^0.25.2",
     "styled-components": "^5.1.0",
     "tailwind.macro": "^1.0.0-alpha.10",
-    "tailwindcss": "^1.3.5"
+    "tailwindcss": "^1.3.5",
+    "react-star-rating-component": "^1.4.1",
+    "react-tabs": "^3.1.0"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
