--- a/package.json
+++ b/package.json
@@ -19,32 +19,32 @@
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-disqus": "^1.1.4",
-    "gatsby-plugin-google-analytics": "^2.3.2",
+    "gatsby-plugin-google-analytics": "^2.3.3",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-postcss": "^2.3.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-plugin-styled-components": "^3.3.0",
     "gatsby-plugin-tailwindcss": "^1.0.3",
     "gatsby-plugin-typescript": "^2.4.0",
     "gatsby-remark-images": "^3.3.0",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-source-flotiq": "^2.0.2",
     "gatsby-transformer-remark": "^2.8.0",
     "gatsby-transformer-sharp": "^2.5.0",
-    "gatsby-plugin-snipcart": "^1.1.2",
-    "gatsby-source-flotiq": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-slick": "^0.25.2",
+    "react-star-rating-component": "^1.4.1",
+    "react-tabs": "^3.1.0",
     "styled-components": "^5.1.0",
     "tailwind.macro": "^1.0.0-alpha.10",
-    "tailwindcss": "^1.3.5",
-    "react-star-rating-component": "^1.4.1",
-    "react-tabs": "^3.1.0"
+    "tailwindcss": "^1.3.5"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
